# gw-provisioning-ethernet-wan

./: CHANGELOG.md  Makefile.am  configure.ac
source/: Makefile.am  autowan.c  gw_prov_ethwan_sm.c
source/include/: autowan.h
source/test/: Makefile.am  run_ut.sh
source/test/Gw_Prov_EthwanTest/: Autowan_Gtest.cpp  Gw_Prov_EthwanTest.cpp  Gw_Prov_Ethwan_Mock.cpp  Gw_Prov_Ethwan_Mock.h  Makefile.am  gtest_main.cpp
source/test/mocks/: mock_gwprovabs.cpp  mock_gwprovabs.h
